test/memory/shannon/memmaxExceedsLineno2.good
memmaxExceedsLineno2.chpl:2: error: Exceeded memory limit
