test/memory/shannon/memmaxExceedsLineno2.chpl

var s: string = "01234567890123456789012345678901234567890123456789";

writeln("Shouldn't get here if --memmax is less than 48");
